--- a/src/about.html
+++ b/src/about.html
@@ -30,123 +30,130 @@
             <a href="about.html" id="menu-about">ABOUT</a>
             <a href="contact.html" id="menu-contact">CONTACT</a>
         </div>
-        <span id="aboutintro">
-            <p id="aboutstart">
-                I’m Octavio Zuriel Zavala, and I’m a ludicrously huge enthusiast in the realms of game development and
-                tech. During my
-                time at DePaul University, I had studied game design for my bachelor’s with my minor in computer
-                science. Amidst my
-                studies I grew to love the process of executing an idea or concept through programming. I will never
-                forget the late
-                nights of debugging and scouring through documentation to eventually lead to the eureka moment in which
-                everything falls
-                into its correct place. Combining that with developing alongside an even more passionate team only
-                solidified my love
-                for the field, the people, and their craft.
-            </p>
-            <p id="aboutnext">
-                Now that I’ve graduated, I look forward to the next opportunity in which I can contribute my passion and
-                technical
-                skills to bring to life more wonderful and strange digital experiences. While always trying my best to
-                remain frontwards facing
-            </p>
-            <p id="aboutlast">
-                Check out what I've been reading as of late!
+        <div id="content">
+            <img src="img/proj_img/headshot.jpg" alt="headshot" id="headshot">
+            <span id="aboutintro">
+                <p id="aboutstart">
+                    I’m Octavio Zuriel Zavala, and I’m a ludicrously huge fan of the realms of game development and
+                    tech. During my
+                    time at DePaul University, I had studied game design for my bachelor’s with my minor in computer
+                    science. Amidst my
+                    studies I grew to love the process of executing an idea or concept through programming. I will never
+                    forget the late
+                    nights of debugging and scouring through documentation to eventually lead to the eureka moment in
+                    which
+                    everything falls
+                    into its correct place. Combining that with developing alongside an even more passionate team only
+                    solidified my love
+                    for the field, the people, and their craft.
+                </p>
+                <p id="aboutnext">
+                    Now that I’ve graduated, I look forward to the next opportunity in which I can contribute my passion
+                    and
+                    technical
+                    skills to bring to life more wonderful and strange digital experiences. While always trying my best
+                    to
+                    remain frontwards facing
+                </p>
+                <p id="aboutlast">
+                    Check out what I've been reading as of late!
 
-            </p>
-        </span>
-        <div class="bookshelfsection">
-            <h1 id="bookshelftitle">Current Reads</h1>
-        </div>
-        <ul>
-            <li>Programming Interviews Exposed: Secrets to Landing Your Next Job Third Edition by <em>John Mongan, Eric
-                    Giguere, Noah
-                    Kindler (ISBN: 978-1-118-26136-1)
-                </em>
-            </li>
-            <li>
-                Game Engine Architecture, Third Edition by
-                <em>Jason Gregory
-                    (ISBN: 907-1-138-034545-4)
-                </em>
-            </li>
-            <li>Code Complete, Second Edition by
-                <em>Steve McConnell
-                    (ISBN: 0-7356-1967-0)
-                </em>
-            </li>
-        </ul>
-        <div class="restofshelf">
-            <h2 id="booklog">Bookshelf</h2>
+                </p>
+            </span>
+            <div class="bookshelfsection">
+                <h1 id="bookshelftitle">Current Reads</h1>
+            </div>
             <ul>
-                <li>
-                    Agile Game Development with Scrum by
-                    <em>Clinton Keith
-                        (ISBN: 0-321-61852-1)
+                <li>Programming Interviews Exposed: Secrets to Landing Your Next Job Third Edition by <em>John Mongan,
+                        Eric
+                        Giguere, Noah
+                        Kindler (ISBN: 978-1-118-26136-1)
                     </em>
                 </li>
                 <li>
-                    Introduction to 3D Game Programming with DirectX 11 by
-                    <em>
-                        Frank D. Luna
-                        (ISBN: 978-1-9364202-2-3)
+                    Game Engine Architecture, Third Edition by
+                    <em>Jason Gregory
+                        (ISBN: 907-1-138-034545-4)
                     </em>
                 </li>
-                <li>
-                    Learn C++ By Making Games by
-                    <em>Erik Yuzwa and Francois Dominic
-                        Laramee
-                        (ISBN: 978-1-58450-455-2)
-                    </em>
-                </li>
-                <li>
-                    The C++ Standard Library from Scratch by
-                    <em>Pablo Halpern
-                        (ISBN: 0-7897-2128-7)</em>
-                </li>
-                <li>
-                    Game Programming Gems
-                    <em>edited by Mark DeLoura
-                        (ISBN: 1-58450-049-2)</em>
-                </li>
-                <li>
-                    Game Programming Gems 6
-                    <em>edited by Michael Dickheiser
-                        (ISBN: 1-58450-450-1)</em>
-                </li>
-                <li>
-                    Writing Secure Code Second Edition
-                    <em>by Michael Howard
-                        and David LeBlanc
-                        (ISBN: 0-7356-1722-8)
-                    </em>
-                </li>
-                <li>
-                    C++ Crash Course
-                    <em>by Josh Lospinoso
-                        (ISBN: 978-1-59327-888-5)
-                    </em>
-                </li>
-                <li>
-                    Data Structures: Abstraction and Design Using Java Second
-                    Edition
-                    <em>by Elliot B. Koffman and Paul A. T. Wolfgang
-                        (ISBN: 978-0-470-12870-1)
-                    </em>
-                </li>
-                <li>
-                    Computer Systems: A Programmer's Perspective, Third Edition
-                    <em>by Randal E. Bryant and David R. O'Hallaron
-                        (ISBN: 978-93-325-7390-1)
-                    </em>
-                </li>
-                <li>
-                    Programming in C Fourth Edition
-                    <em>by Stephen G. Kochan
-                        (ISBN: 978-0-321-77641-9)
+                <li>Code Complete, Second Edition by
+                    <em>Steve McConnell
+                        (ISBN: 0-7356-1967-0)
                     </em>
                 </li>
             </ul>
+            <div class="restofshelf">
+                <h2 id="booklog">Bookshelf</h2>
+                <ul>
+                    <li>
+                        Agile Game Development with Scrum by
+                        <em>Clinton Keith
+                            (ISBN: 0-321-61852-1)
+                        </em>
+                    </li>
+                    <li>
+                        Introduction to 3D Game Programming with DirectX 11 by
+                        <em>
+                            Frank D. Luna
+                            (ISBN: 978-1-9364202-2-3)
+                        </em>
+                    </li>
+                    <li>
+                        Learn C++ By Making Games by
+                        <em>Erik Yuzwa and Francois Dominic
+                            Laramee
+                            (ISBN: 978-1-58450-455-2)
+                        </em>
+                    </li>
+                    <li>
+                        The C++ Standard Library from Scratch by
+                        <em>Pablo Halpern
+                            (ISBN: 0-7897-2128-7)</em>
+                    </li>
+                    <li>
+                        Game Programming Gems
+                        <em>edited by Mark DeLoura
+                            (ISBN: 1-58450-049-2)</em>
+                    </li>
+                    <li>
+                        Game Programming Gems 6
+                        <em>edited by Michael Dickheiser
+                            (ISBN: 1-58450-450-1)</em>
+                    </li>
+                    <li>
+                        Writing Secure Code Second Edition
+                        <em>by Michael Howard
+                            and David LeBlanc
+                            (ISBN: 0-7356-1722-8)
+                        </em>
+                    </li>
+                    <li>
+                        C++ Crash Course
+                        <em>by Josh Lospinoso
+                            (ISBN: 978-1-59327-888-5)
+                        </em>
+                    </li>
+                    <li>
+                        Data Structures: Abstraction and Design Using Java Second
+                        Edition
+                        <em>by Elliot B. Koffman and Paul A. T. Wolfgang
+                            (ISBN: 978-0-470-12870-1)
+                        </em>
+                    </li>
+                    <li>
+                        Computer Systems: A Programmer's Perspective, Third Edition
+                        <em>by Randal E. Bryant and David R. O'Hallaron
+                            (ISBN: 978-93-325-7390-1)
+                        </em>
+                    </li>
+                    <li>
+                        Programming in C Fourth Edition
+                        <em>by Stephen G. Kochan
+                            (ISBN: 978-0-321-77641-9)
+                        </em>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 
