--- a/src/about.html
+++ b/src/about.html
@@ -43,7 +43,8 @@
                     nights of debugging and scouring through documentation to eventually lead to the eureka moment in
                     which
                     everything falls
-                    into its correct place. Combining that with developing alongside an even more passionate team only
+                    into its correct place. Combining that with developing alongside even more passionate teams at the
+                    time only
                     solidified my love
                     for the field, the people, and their craft.
                 </p>
