--- a/src/resume.html
+++ b/src/resume.html
@@ -34,7 +34,8 @@
             <iframe class="resume" src="img/resume/octavio_Resume.pdf" width="600" height="500"></iframe>
             <p id="resumetext">
                 To the left is my current resume as of February 2025.
-                I'm currently applying to game programming positions with the hopes of entering the industry! Though
+                I'm currently applying to game programming positions with the hopes of entering the games industry!
+                Though
                 I am employed with Xfinity as an SSA at the moment, I'm working on projects and doing
                 what I can to push myself forward.
             </p>
