contact page work

--- a/src/contact.html
+++ b/src/contact.html
@@ -31,11 +31,20 @@
             <a href="about.html" id="menu-about">ABOUT</a>
             <a href="contact.html" id="menu-contact">CONTACT</a>
         </div>
-        <ul>TO-DO
-            <li>Format contact page</li>
-            <li>Basic email sending</li>
+        <div class="contactform">
+            <form action="" class="contact-left">
+                <div class="contact-title">
+                    <p>Feel free to send a message my way! I'll try to respond as soon as I'm able to!</p>
+                    <hr>
+                </div>
+                <input type="text" name="name" placeholder="Your Name" class="contact-name" required>
+                <input type="email" name="email" placeholder="Your Email" class="contact-email" required>
+                <textarea name="message" placeholder="Message" class="contact-message" required></textarea>
+                <button type="submit">Submit</button>
 
-        </ul>
+            </form>
+
+        </div>
     </div>
 </body>
 
