Works page work lol

--- a/src/works.html
+++ b/src/works.html
@@ -37,12 +37,12 @@
                 developed in Unity. Constructed within weekly sprints over
                 the course of 3 months within a team of 9.
             </p>
-            <span id="projectTitle">Puppy Pets Puzzle Playground</span>
+            <span id="projectTitle"><a href="p4.html" id="p4redir">Puppy Pets Puzzle Playground</a></span>
             <p id="projectText">
                 Connect-3 Matching Game made in Unity. Developed
                 in 10 weekly sprints within a team of 3.
             </p>
-            <span id="projectTitle">Ibunn</span>
+            <span id="projectTitle"><a href="ibunn.html" id="ibunnredir">Ibunn</a></span>
             <p id="projectText">
                 First person dungeon crawler prototype
                 made in Unity. Developed solo in 10 weekly sprints.
