slight edit to about page

--- a/src/about.html
+++ b/src/about.html
@@ -57,7 +57,7 @@
                     remain frontwards facing
                 </p>
                 <p id="aboutlast">
-                    Check out what I've been reading as of late!
+                    Check out what I've been reading as of late to keep myself polished!
 
                 </p>
             </span>
