work page organization insertions

--- a/src/works.html
+++ b/src/works.html
@@ -31,22 +31,30 @@
             <a href="contact.html" id="menu-contact">CONTACT</a>
         </div>
         <div id="worksBody">
-            <span id="projectTitle"><a href="monad.html" id="monadredir">Monad</a></span>
-            <p id="projectText">
-                PSX visually inspired 3D adventure platformer
-                developed in Unity. Constructed within weekly sprints over
-                the course of 3 months within a team of 9.
-            </p>
-            <span id="projectTitle"><a href="p4.html" id="p4redir">Puppy Pets Puzzle Playground</a></span>
-            <p id="projectText">
-                Connect-3 Matching Game made in Unity. Developed
-                in 10 weekly sprints within a team of 3.
-            </p>
-            <span id="projectTitle"><a href="ibunn.html" id="ibunnredir">Ibunn</a></span>
-            <p id="projectText">
-                First person dungeon crawler prototype
-                made in Unity. Developed solo in 10 weekly sprints.
-            </p>
+            <div class="monad">
+                <span id="projectTitle"><a href="monad.html" id="monadredir">Monad</a></span>
+                <img src="img/proj_img/monad_cover.png" alt="monadcover" id="monadcover">
+                <p id="projectText">
+                    PSX visually inspired 3D adventure platformer
+                    developed in Unity. Constructed within weekly sprints over
+                    the course of 3 months within a team of 9.
+                </p>
+            </div>
+            <div class="p4">
+                <span id="projectTitle"><a href="p4.html" id="p4redir">Puppy Pets Puzzle Playground</a></span>
+                <p id="projectText">
+                    Connect-3 Matching Game made in Unity. Developed
+                    in 10 weekly sprints within a team of 3.
+                </p>
+            </div>
+            <div class="ibunn">
+                <span id="projectTitle"><a href="ibunn.html" id="ibunnredir">Ibunn</a></span>
+                <p id="projectText">
+                    First person dungeon crawler prototype
+                    made in Unity. Developed solo in 10 weekly sprints.
+                </p>
+
+            </div>
         </div>
     </div>
 </body>
