--- a/src/works.html
+++ b/src/works.html
@@ -30,7 +30,7 @@
             <a href="about.html" id="menu-about">ABOUT</a>
             <a href="contact.html" id="menu-contact">CONTACT</a>
         </div>
-        <div id="worksBody">
+        <div clas5s="worksBody">
             <div class="monad">
                 <span id="projectTitle"><a href="monad.html" id="monadredir">Monad</a></span>
                 <img src="img/proj_img/monad_cover.png" alt="monadcover" id="monadcover">
