--- a/src/works.html
+++ b/src/works.html
@@ -30,9 +30,9 @@
             <a href="about.html" id="menu-about">ABOUT</a>
             <a href="contact.html" id="menu-contact">CONTACT</a>
         </div>
-        <div clas5s="worksBody">
+        <div class="content">
+            <span id="projectTitle"><a href="monad.html" id="monadredir">Monad</a></span>
             <div class="monad">
-                <span id="projectTitle"><a href="monad.html" id="monadredir">Monad</a></span>
                 <img src="img/proj_img/monad_cover.png" alt="monadcover" id="monadcover">
                 <p id="projectText">
                     PSX visually inspired 3D adventure platformer
@@ -40,18 +40,20 @@
                     the course of 3 months within a team of 9.
                 </p>
             </div>
+            <span id="projectTitle"><a href="p4.html" id="p4redir">Puppy Pets Puzzle Playground</a></span>
             <div class="p4">
-                <span id="projectTitle"><a href="p4.html" id="p4redir">Puppy Pets Puzzle Playground</a></span>
+                <img src="img/proj_img/p4_startscreen.png" alt="p4_startscreen">
                 <p id="projectText">
                     Connect-3 Matching Game made in Unity. Developed
                     in 10 weekly sprints within a team of 3.
                 </p>
             </div>
+            <span id="projectTitle"><a href="ibunn.html" id="ibunnredir">Ibunn</a></span>
             <div class="ibunn">
-                <span id="projectTitle"><a href="ibunn.html" id="ibunnredir">Ibunn</a></span>
+                <img src="img/proj_img/ibunn_gameplay1.png" alt="ibunn_gameplay1">
                 <p id="projectText">
                     First person dungeon crawler prototype
-                    made in Unity. Developed solo in 10 weekly sprints.
+                    made in Unity. I developed this project on my own in 10 weekly sprints.
                 </p>
 
             </div>
