--- a/src/contact.html
+++ b/src/contact.html
@@ -38,8 +38,8 @@
                     <hr>
                 </div>
                 <input type="hidden" name="access_key" value="162f61ce-073c-40e7-be9d-6f2c03e2b7ec">
-                <input type="text" name="name" placeholder="Your Name" class="contact-name" required>
-                <input type="email" name="email" placeholder="Your Email" class="contact-email" required>
+                <input type="text" name="name" placeholder="Name" class="contact-name" required>
+                <input type="email" name="email" placeholder="Email" class="contact-email" required>
                 <textarea name="message" placeholder="Message" class="contact-message" required></textarea>
                 <button type="submit">Submit</button>
 
