slight about page change

--- a/src/about.html
+++ b/src/about.html
@@ -52,12 +52,12 @@
                     Now that I’ve graduated, I look forward to the next opportunity in which I can contribute my passion
                     and
                     technical
-                    skills to bring to life more wonderful and strange digital experiences. While always trying my best
-                    to
-                    remain frontwards facing
+                    skills to bring to life more wonderful and strange digital experiences. Until then I'll continue to
+                    learn, and develop!
+                    All while remaining frontwards facing.
                 </p>
                 <p id="aboutlast">
-                    Check out what I've been reading as of late to keep myself polished!
+                    Check out what I've been reading as of late to keep myself polished and moving forward!
 
                 </p>
             </span>
