work done at work

--- a/src/works.html
+++ b/src/works.html
@@ -35,9 +35,12 @@
             <div class="monad">
                 <img src="img/proj_img/monad_cover.png" alt="monadcover" id="monadcover">
                 <p id="projectText">
-                    PSX visually inspired 3D adventure platformer
-                    developed in Unity. Constructed within weekly sprints over
-                    the course of 3 months within a team of 9.
+                    Monad is a PSX inspired 3D adventure platformer developed in Unity. This project was constructed by
+                    weekly sprints over
+                    the course of 3 months, within a team of 9.
+                </p>
+                <p id="projectText">
+
                 </p>
             </div>
             <span id="projectTitle"><a href="ibunn.html" id="ibunnredir">Ibunn</a></span>
