work done on retroTop

--- a/src/works.html
+++ b/src/works.html
@@ -35,11 +35,14 @@
             <div class="monad">
                 <img src="img/proj_img/monad_cover.png" alt="monadcover" id="monadcover">
                 <p id="projectText">
-                    Monad is a PSX inspired 3D adventure platformer developed in Unity. This project was constructed by
+                    Monad is a PSX inspired 3D adventure platformer developed in Unity. A fully fledged experience featuring nostalgic gameplay elements from 
+                    titles such as Resident Evil. This project was constructed by
                     weekly sprints over
                     the course of 3 months, within a team of 9.
                 </p>
                 <p id="projectText">
+                    What started off as a slow crawl, quickly developed into a full sprint. As this was the most ambitious project
+                    I've been fortunate enough to be apart of up to this point. This experience solidifed my passion for game programming!
 
                 </p>
             </div>
@@ -47,8 +50,12 @@
             <div class="ibunn">
                 <img src="img/proj_img/ibunn_gameplay1.png" alt="ibunn_gameplay1">
                 <p id="projectText">
-                    First person dungeon crawler prototype
+                    Ibunn is a first person perspective dungeon crawler prototype
                     made in Unity. I developed this project on my own in 10 weekly sprints.
+                </p>
+                <p id="projectText">
+                    One of my more experimental projects, based off of gameplay components of some of my favorite games of all time. 
+                    Specifically <em>Megami Ibunroku: Persona, Etrian Odyssey and Devil Summoner: Soul Hackers</em>
                 </p>
             </div>
             <span id="projectTitle"><a href="p4.html" id="p4redir">Puppy Pets Puzzle Playground</a></span>
