work done at moms

--- a/src/works.html
+++ b/src/works.html
@@ -62,7 +62,7 @@
             <div class="p4">
                 <img src="img/proj_img/p4_startscreen.png" alt="p4_startscreen">
                 <p id="projectText">
-                    Connect-3 Matching Game made in Unity. Developed
+                    Puppy Pets Puzzle Program is a Connect-3 Matching Game made in Unity. Developed
                     in 10 weekly sprints within a team of 3.
                 </p>
             </div>
