work done at moms

--- a/src/works.html
+++ b/src/works.html
@@ -62,8 +62,12 @@
             <div class="p4">
                 <img src="img/proj_img/p4_startscreen.png" alt="p4_startscreen">
                 <p id="projectText">
-                    Puppy Pets Puzzle Program is a Connect-3 Matching Game made in Unity. Developed
+                    Puppy Pets Puzzle Program (P4) is a connect-3 matching game made in Unity. Designed around the overarching
+                    concept of a quick game that can be played at an adoption center. Developed
                     in 10 weekly sprints within a team of 3.
+                </p>
+                <p id="projectText"> 
+                     An earlier project that introduced me to the development cycle of games, and oddly enough the smoothest one at that.
                 </p>
             </div>
         </div>
