--- a/src/works.html
+++ b/src/works.html
@@ -48,7 +48,9 @@
             </div>
             <span id="projectTitle"><a href="ibunn.html" id="ibunnredir">Ibunn</a></span>
             <div class="ibunn">
-                <img src="img/proj_img/ibunn_gameplay1.png" alt="ibunn_gameplay1">
+                <a href="ibunn.html" id="ibunnredir">
+                    <img src="img/proj_img/ibunn_gameplay1.png" alt="ibunn_gameplay1">
+                </a>
                 <p id="projectText">
                     Ibunn is a first person perspective dungeon crawler prototype
                     made in Unity. I developed this project on my own in 10 weekly sprints.
