--- a/src/monad.html
+++ b/src/monad.html
@@ -31,7 +31,7 @@
             <a href="contact.html" id="menu-contact">CONTACT</a>
         </div>
 
-        <div class="monadSlideshow">
+        <div class="monadslideshow">
             <div class="monadslides">
                 <img src="img/proj_img/ibunn_gameplay2.png" alt="Monad start" id="homemonad1">
             </div>
@@ -39,7 +39,7 @@
                 <img src="img/proj_img/monad_hall.png" alt="Monad Hallway" id="homemonad2">
             </div>
             <div class="monadslides">
-                <img src="img/proj_img/monad_alley.png" alt="Monad intro" id="homemonad3">
+                <img src="img/proj_img/monadcredits.png" alt="Monad credits" id="homemonad3">
             </div>
             <!-- Next and previous buttons -->
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
