work done today, I love you Major

--- a/src/monad.html
+++ b/src/monad.html
@@ -33,13 +33,22 @@
 
         <div class="monadslideshow">
             <div class="monadslides">
-                <img src="img/proj_img/ibunn_gameplay2.png" alt="Monad start" id="homemonad1">
+                <img src="img/proj_img/monad_startarea.png" alt="Monad start area" id="monadslideimg">
             </div>
             <div class="monadslides">
-                <img src="img/proj_img/monad_hall.png" alt="Monad Hallway" id="homemonad2">
+                <img src="img/proj_img/monad_startarea2.png" alt="Monad start area 2" id="monadslideimg">
             </div>
             <div class="monadslides">
-                <img src="img/proj_img/monadcredits.png" alt="Monad credits" id="homemonad3">
+                <img src="img/proj_img/monadcredits.png" alt="Monad credits" id="monadslideimg">
+            </div>
+            <div class="monadslides">
+                <img src="img/proj_img/monad_church.png" alt="Monad church" id="monadslideimg">
+            </div>
+            <div class="monadslides">
+                <img src="img/proj_img/monad_tvroom.png" alt="Monad TV Room" id="monadslideimg">
+            </div>
+            <div class="monadslides">
+                <img src="img/proj_img/monad_summoncircle.png" alt="Monad Summoner" id="monadslideimg">
             </div>
             <!-- Next and previous buttons -->
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -50,6 +59,9 @@
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+            <span class="dot" onclick="currentSlide(5)"></span>
+            <span class="dot" onclick="currentSlide(6)"></span>
         </div>
         <script src="monad.js"></script>
     </div>
