--- a/src/works.html
+++ b/src/works.html
@@ -33,7 +33,9 @@
         <div class="content">
             <span id="projectTitle"><a href="monad.html" id="monadredir">Monad</a></span>
             <div class="monad">
-                <img src="img/proj_img/monad_cover.png" alt="monadcover" id="monadcover">
+                <a href="monad.html" id="monadredir">
+                    <img src="img/proj_img/monad_cover.png" alt="monadcover" id="monadcover">
+                </a>
                 <p id="projectText">
                     Monad is a PSX inspired 3D adventure platformer developed in Unity. A fully fledged experience featuring nostalgic gameplay elements from 
                     titles such as Resident Evil. This project was constructed by
@@ -62,7 +64,9 @@
             </div>
             <span id="projectTitle"><a href="p4.html" id="p4redir">Puppy Pets Puzzle Playground</a></span>
             <div class="p4">
-                <img src="img/proj_img/p4_startscreen.png" alt="p4_startscreen">
+                <a href="p4.html" id="p4redir">
+                    <img src="img/proj_img/p4_startscreen.png" alt="p4_startscreen">
+                </a>
                 <p id="projectText">
                     Puppy Pets Puzzle Program (P4) is a connect-3 matching game made in Unity. Designed around the overarching
                     concept of a quick game that can be played at an adoption center. Developed
