--- a/src/home.html
+++ b/src/home.html
@@ -49,13 +49,13 @@
         </section>
         <div class="homepageSlideshow">
             <div class="hpslides">
-                <img src="img/proj_img/monadstartscreen.png" alt="Monad start" id="homemonad1">
+                <img src="img/proj_img/monadstartscreen.png" alt="Monad start" id="monadslideimg">
             </div>
             <div class="hpslides">
-                <img src="img/proj_img/monad_hall.png" alt="Monad Hallway" id="homemonad2">
+                <img src="img/proj_img/monad_hall.png" alt="Monad Hallway" id="monadslideimg">
             </div>
             <div class="hpslides">
-                <img src="img/proj_img/monad_alley.png" alt="Monad intro" id="homemonad3">
+                <img src="img/proj_img/monad_alley.png" alt="Monad intro" id="monadslideimg">
             </div>
             <!-- Next and previous buttons -->
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
