--- a/src/monad.html
+++ b/src/monad.html
@@ -33,13 +33,13 @@
 
         <div class="monadslideshow">
             <div class="monadslides">
+                <img src="img/proj_img/monad_intro.png" alt="Monad intro" id="monadslideimg">
+            </div>
+            <div class="monadslides">
                 <img src="img/proj_img/monad_startarea.png" alt="Monad start area" id="monadslideimg">
             </div>
             <div class="monadslides">
                 <img src="img/proj_img/monad_startarea2.png" alt="Monad start area 2" id="monadslideimg">
-            </div>
-            <div class="monadslides">
-                <img src="img/proj_img/monadcredits.png" alt="Monad credits" id="monadslideimg">
             </div>
             <div class="monadslides">
                 <img src="img/proj_img/monad_church.png" alt="Monad church" id="monadslideimg">
@@ -49,6 +49,12 @@
             </div>
             <div class="monadslides">
                 <img src="img/proj_img/monad_summoncircle.png" alt="Monad Summoner" id="monadslideimg">
+            </div>
+            <div class="monadslides">
+                <img src="img/proj_img/monad_skelabro.png" alt="Monad skeladude" id="monadslideimg">
+            </div>
+            <div class="monadslides">
+                <img src="img/proj_img/monadcredits.png" alt="Monad credits" id="monadslideimg">
             </div>
             <!-- Next and previous buttons -->
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -62,6 +68,8 @@
             <span class="dot" onclick="currentSlide(4)"></span>
             <span class="dot" onclick="currentSlide(5)"></span>
             <span class="dot" onclick="currentSlide(6)"></span>
+            <span class="dot" onclick="currentSlide(7)"></span>
+            <span class="dot" onclick="currentSlide(8)"></span>
         </div>
         <script src="monad.js"></script>
     </div>
