--- a/src/monad.html
+++ b/src/monad.html
@@ -30,7 +30,11 @@
             <a href="about.html" id="menu-about">ABOUT</a>
             <a href="contact.html" id="menu-contact">CONTACT</a>
         </div>
-
+        <div class="projectdesc">
+            <p>
+                Here is where we expand on our project.
+            </p>
+        </div>
         <div class="monadslideshow">
             <div class="monadslides">
                 <img src="img/proj_img/monad_intro.png" alt="Monad intro" id="monadslideimg">
@@ -61,7 +65,7 @@
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
         <br>
-        <div style="text-align: center;">
+        <div style="text-align: right;">
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
