--- a/src/monad.html
+++ b/src/monad.html
@@ -31,8 +31,8 @@
             <a href="contact.html" id="menu-contact">CONTACT</a>
         </div>
         <div class="projectdesc">
-            <p>
-                
+            <p id="projectText">
+                The start of this project in particular was all up in the air.
             </p>
         </div>
         <div class="monadslideshow">
@@ -65,17 +65,7 @@
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
         <br>
-        <div style="text-align: right;">
-            <span class="dot" onclick="currentSlide(1)"></span>
-            <span class="dot" onclick="currentSlide(2)"></span>
-            <span class="dot" onclick="currentSlide(3)"></span>
-            <span class="dot" onclick="currentSlide(4)"></span>
-            <span class="dot" onclick="currentSlide(5)"></span>
-            <span class="dot" onclick="currentSlide(6)"></span>
-            <span class="dot" onclick="currentSlide(7)"></span>
-            <span class="dot" onclick="currentSlide(8)"></span>
-        </div>
-        <script src="monad.js"></script>
+        <script src="slideshow.js"></script>
     </div>
 </body>
 
