--- a/src/p4.html
+++ b/src/p4.html
@@ -30,6 +30,25 @@
             <a href="about.html" id="menu-about">ABOUT</a>
             <a href="contact.html" id="menu-contact">CONTACT</a>
         </div>
+        <div class="slideshow">
+            <div class="slides">
+                <img src="img/proj_img/p4_startscreen.png" alt="start screen" id="slideimg">
+            </div>
+            <div class="slides">
+                <img src="img/proj_img/p4_intro.png" alt="intro" id="slideimg">
+            </div>
+            <div class="slides">
+                <img src="img/proj_img/p4_gameplay.gif" alt="p4_gameplay" id="slideimg">
+            </div>
+            <div class="slides">
+                <img src="img/proj_img/p4_credits.png" alt="credits" id="slideimg">
+            </div>
+
+            <!-- Next and previous buttons -->
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <script src="slideshow.js"></script>
     </div>
 </body>
 
