fixed and consolidated project slideshows

--- a/src/ibunn.html
+++ b/src/ibunn.html
@@ -40,7 +40,7 @@
             <div class="slides">
                 <img src="img/proj_img/ibunn_gameplay2.png" alt="p4_gameplay" id="slideimg">
             </div>
-            <div id="slides">
+            <div class="slides">
                 <img src="img/proj_img/ibunn_gameplay1.png" alt="ibunn_gameplay1" id="slideimg">
             </div>
             <!-- Next and previous buttons -->
