--- a/src/monad.html
+++ b/src/monad.html
@@ -35,30 +35,30 @@
                 The start of this project in particular was all up in the air.
             </p>
         </div>
-        <div class="monadslideshow">
-            <div class="monadslides">
-                <img src="img/proj_img/monad_intro.png" alt="Monad intro" id="monadslideimg">
+        <div class="slideshow">
+            <div class="slides">
+                <img src="img/proj_img/monad_intro.png" alt="Monad intro" id="slideimg">
             </div>
-            <div class="monadslides">
-                <img src="img/proj_img/monad_startarea.png" alt="Monad start area" id="monadslideimg">
+            <div class="slides">
+                <img src="img/proj_img/monad_startarea.png" alt="Monad start area" id="slideimg">
             </div>
-            <div class="monadslides">
-                <img src="img/proj_img/monad_startarea2.png" alt="Monad start area 2" id="monadslideimg">
+            <div class="slides">
+                <img src="img/proj_img/monad_startarea2.png" alt="Monad start area 2" id="slideimg">
             </div>
-            <div class="monadslides">
-                <img src="img/proj_img/monad_church.png" alt="Monad church" id="monadslideimg">
+            <div class="slides">
+                <img src="img/proj_img/monad_church.png" alt="Monad church" id="slideimg">
             </div>
-            <div class="monadslides">
-                <img src="img/proj_img/monad_tvroom.png" alt="Monad TV Room" id="monadslideimg">
+            <div class="slides">
+                <img src="img/proj_img/monad_tvroom.png" alt="Monad TV Room" id="slideimg">
             </div>
-            <div class="monadslides">
-                <img src="img/proj_img/monad_summoncircle.png" alt="Monad Summoner" id="monadslideimg">
+            <div class="slides">
+                <img src="img/proj_img/monad_summoncircle.png" alt="Monad Summoner" id="slideimg">
             </div>
-            <div class="monadslides">
-                <img src="img/proj_img/monad_skelabro.png" alt="Monad skeladude" id="monadslideimg">
+            <div class="slides">
+                <img src="img/proj_img/monad_skelabro.png" alt="Monad skeladude" id="slideimg">
             </div>
-            <div class="monadslides">
-                <img src="img/proj_img/monadcredits.png" alt="Monad credits" id="monadslideimg">
+            <div class="slides">
+                <img src="img/proj_img/monadcredits.png" alt="Monad credits" id="slideimg">
             </div>
             <!-- Next and previous buttons -->
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
