--- a/src/home.html
+++ b/src/home.html
@@ -34,7 +34,7 @@
             <h1>Hello, Hello!</h1>
             <p id="bio">
                 My name is Zuriel (Octavio is my first name but most people call me by my middle name),
-                and I'm a recently graduated student from Depaul University. Self-driven with a
+                and I'm a graduated student from Depaul University. Self-driven with a
                 strong foundation in computer science and a deep passion for game programming, I am
                 extremely eager to contribute to innovative projects to further immerse players in digital experiences
                 akin
