--- a/src/p4.html
+++ b/src/p4.html
@@ -30,6 +30,11 @@
             <a href="about.html" id="menu-about">ABOUT</a>
             <a href="contact.html" id="menu-contact">CONTACT</a>
         </div>
+        <div class="projectdesc">
+            <p id="projectText">
+                The start.
+            </p>
+        </div>
         <div class="slideshow">
             <div class="slides">
                 <img src="img/proj_img/p4_startscreen.png" alt="start screen" id="slideimg">
