--- a/src/ibunn.html
+++ b/src/ibunn.html
@@ -53,10 +53,10 @@
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
         <script src="slideshow.js"></script>
-
-
-
     </div>
 </body>
 
 </html>
+
+<!--TODO: EXPAND ON PROJECT
+THOUGHT PROCESS, WHAT YOU DID, HOW IT WENT AND WHAT YOU LEARNEDs-->
