overlooked some formatting stuff, fixed now

--- a/src/ibunn.html
+++ b/src/ibunn.html
@@ -30,27 +30,29 @@
             <a href="about.html" id="menu-about">ABOUT</a>
             <a href="contact.html" id="menu-contact">CONTACT</a>
         </div>
-        <div class="projectdesc">
-            <p id="projectText">
-                The start.
-            </p>
-        </div>
-        <div class="slideshow">
-            <div class="slides">
-                <img src="img/proj_img/ibunn_start.png" alt="ibunn start" id="slideimg">
+        <div class="workbody">
+            <div class="projectdesc">
+                <p id="projectText">
+                    The start.
+                </p>
             </div>
-            <div class="slides">
-                <img src="img/proj_img/ibunn_intro.png" alt="intro" id="slideimg">
+            <div class="slideshow">
+                <div class="slides">
+                    <img src="img/proj_img/ibunn_start.png" alt="ibunn start" id="slideimg">
+                </div>
+                <div class="slides">
+                    <img src="img/proj_img/ibunn_intro.png" alt="intro" id="slideimg">
+                </div>
+                <div class="slides">
+                    <img src="img/proj_img/ibunn_gameplay2.png" alt="p4_gameplay" id="slideimg">
+                </div>
+                <div class="slides">
+                    <img src="img/proj_img/ibunn_gameplay1.png" alt="ibunn_gameplay1" id="slideimg">
+                </div>
+                <!-- Next and previous buttons -->
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div>
-            <div class="slides">
-                <img src="img/proj_img/ibunn_gameplay2.png" alt="p4_gameplay" id="slideimg">
-            </div>
-            <div class="slides">
-                <img src="img/proj_img/ibunn_gameplay1.png" alt="ibunn_gameplay1" id="slideimg">
-            </div>
-            <!-- Next and previous buttons -->
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
         <script src="slideshow.js"></script>
     </div>
