--- a/src/monad.html
+++ b/src/monad.html
@@ -30,43 +30,49 @@
             <a href="about.html" id="menu-about">ABOUT</a>
             <a href="contact.html" id="menu-contact">CONTACT</a>
         </div>
-        <div class="projectdesc">
-            <p id="projectText">
-                The start of this project in particular was all up in the air.
-            </p>
+        <div class="workbody">
+            <div class="projectdesc">
+                <p>
+                    The inital brainstorming for this project was quite sporatic from what I remember. The team had many
+                    ideas, but
+                    nothing was sticking.
+                </p>
+            </div>
+            <div class="slideshow">
+                <div class="slides">
+                    <img src="img/proj_img/monad_intro.png" alt="Monad intro" id="slideimg">
+                </div>
+                <div class="slides">
+                    <img src="img/proj_img/monad_startarea.png" alt="Monad start area" id="slideimg">
+                </div>
+                <div class="slides">
+                    <img src="img/proj_img/monad_startarea2.png" alt="Monad start area 2" id="slideimg">
+                </div>
+                <div class="slides">
+                    <img src="img/proj_img/monad_church.png" alt="Monad church" id="slideimg">
+                </div>
+                <div class="slides">
+                    <img src="img/proj_img/monad_tvroom.png" alt="Monad TV Room" id="slideimg">
+                </div>
+                <div class="slides">
+                    <img src="img/proj_img/monad_summoncircle.png" alt="Monad Summoner" id="slideimg">
+                </div>
+                <div class="slides">
+                    <img src="img/proj_img/monad_skelabro.png" alt="Monad skeladude" id="slideimg">
+                </div>
+                <div class="slides">
+                    <img src="img/proj_img/monadcredits.png" alt="Monad credits" id="slideimg">
+                </div>
+                <!-- Next and previous buttons -->
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
         </div>
-        <div class="slideshow">
-            <div class="slides">
-                <img src="img/proj_img/monad_intro.png" alt="Monad intro" id="slideimg">
-            </div>
-            <div class="slides">
-                <img src="img/proj_img/monad_startarea.png" alt="Monad start area" id="slideimg">
-            </div>
-            <div class="slides">
-                <img src="img/proj_img/monad_startarea2.png" alt="Monad start area 2" id="slideimg">
-            </div>
-            <div class="slides">
-                <img src="img/proj_img/monad_church.png" alt="Monad church" id="slideimg">
-            </div>
-            <div class="slides">
-                <img src="img/proj_img/monad_tvroom.png" alt="Monad TV Room" id="slideimg">
-            </div>
-            <div class="slides">
-                <img src="img/proj_img/monad_summoncircle.png" alt="Monad Summoner" id="slideimg">
-            </div>
-            <div class="slides">
-                <img src="img/proj_img/monad_skelabro.png" alt="Monad skeladude" id="slideimg">
-            </div>
-            <div class="slides">
-                <img src="img/proj_img/monadcredits.png" alt="Monad credits" id="slideimg">
-            </div>
-            <!-- Next and previous buttons -->
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
-        </div>
-        <br>
         <script src="slideshow.js"></script>
     </div>
 </body>
 
 </html>
+
+<!--TODO: EXPAND ON PROJECT
+THOUGHT PROCESS, WHAT YOU DID, HOW IT WENT AND WHAT YOU LEARNEDs-->
