--- a/src/p4.html
+++ b/src/p4.html
@@ -30,29 +30,31 @@
             <a href="about.html" id="menu-about">ABOUT</a>
             <a href="contact.html" id="menu-contact">CONTACT</a>
         </div>
-        <div class="projectdesc">
-            <p id="projectText">
-                The start.
-            </p>
-        </div>
-        <div class="slideshow">
-            <div class="slides">
-                <img src="img/proj_img/p4_startscreen.png" alt="start screen" id="slideimg">
+        <div class="workbody">
+            <div class="projectdesc">
+                <p id="projectText">
+                    The start.
+                </p>
             </div>
-            <div class="slides">
-                <img src="img/proj_img/p4_intro.png" alt="intro" id="slideimg">
-            </div>
-            <div class="slides">
-                <img src="img/proj_img/p4_gameplay.gif" alt="p4_gameplay" id="slideimg">
-            </div>
-            <div class="slides">
-                <img src="img/proj_img/p4_credits.png" alt="credits" id="slideimg">
-            </div>
+            <div class="slideshow">
+                <div class="slides">
+                    <img src="img/proj_img/p4_startscreen.png" alt="start screen" id="slideimg">
+                </div>
+                <div class="slides">
+                    <img src="img/proj_img/p4_intro.png" alt="intro" id="slideimg">
+                </div>
+                <div class="slides">
+                    <img src="img/proj_img/p4_gameplay.gif" alt="p4_gameplay" id="slideimg">
+                </div>
+                <div class="slides">
+                    <img src="img/proj_img/p4_credits.png" alt="credits" id="slideimg">
+                </div>
 
-            <!-- Next and previous buttons -->
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
-            <script src="slideshow.js"></script>
+                <!-- Next and previous buttons -->
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                <script src="slideshow.js"></script>
+            </div>
         </div>
     </div>
 </body>
