--- a/src/home.html
+++ b/src/home.html
@@ -30,38 +30,39 @@
             <a href="about.html" id="menu-about">ABOUT</a>
             <a href="contact.html" id="menu-contact">CONTACT</a>
         </div>
-        <section id="bio_section">
-            <h1>Hello, Hello!</h1>
+        <h1>Hello, Hello!</h1>
+        <div class="workbody">
             <p id="bio">
                 My name is Zuriel (Octavio is my first name but most people call me by my middle name),
                 and I'm a graduated student from Depaul University. Self-driven with a
                 strong foundation in computer science and a deep passion for game programming, I am
-                extremely eager to contribute to innovative projects to further immerse players in digital experiences
+                extremely eager to contribute to innovative projects to further immerse players in digital
+                experiences
                 akin
                 to my own. In tangent further my technical skillset, committed to a lifetime of learning!
             </p>
-            <p id="homeprojintro">
-                Below are images from my most recently completed project, with more detail alongside a couple of others
+            <p id="bio">
+                To the right are images from my most recently completed project, with more detail alongside a couple of
+                others
                 on my 'Works'
                 section on the site.
                 Take a gander!
             </p>
-        </section>
-        <div class="homepageSlideshow">
-            <div class="hpslides">
-                <img src="img/proj_img/monadstartscreen.png" alt="Monad start" id="monadslideimg">
+            <div class="homepageSlideshow">
+                <div class="hpslides">
+                    <img src="img/proj_img/monadstartscreen.png" alt="Monad start" id="monadslideimg">
+                </div>
+                <div class="hpslides">
+                    <img src="img/proj_img/monad_hall.png" alt="Monad Hallway" id="monadslideimg">
+                </div>
+                <div class="hpslides">
+                    <img src="img/proj_img/monad_alley.png" alt="Monad intro" id="monadslideimg">
+                </div>
+                <!-- Next and previous buttons -->
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div>
-            <div class="hpslides">
-                <img src="img/proj_img/monad_hall.png" alt="Monad Hallway" id="monadslideimg">
-            </div>
-            <div class="hpslides">
-                <img src="img/proj_img/monad_alley.png" alt="Monad intro" id="monadslideimg">
-            </div>
-            <!-- Next and previous buttons -->
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
-
         <script src="home.js"></script>
 </body>
 <!--ADD MORE MONAD PHOTOS TO GALLERY-->
