--- a/src/home.html
+++ b/src/home.html
@@ -32,22 +32,25 @@
         </div>
         <h1>Hello, Hello!</h1>
         <div class="workbody">
-            <p id="bio">
-                My name is Zuriel (Octavio is my first name but most people call me by my middle name),
-                and I'm a graduated student from Depaul University. Self-driven with a
-                strong foundation in computer science and a deep passion for game programming, I am
-                extremely eager to contribute to innovative projects to further immerse players in digital
-                experiences
-                akin
-                to my own. In tangent further my technical skillset, committed to a lifetime of learning!
-            </p>
-            <p id="bio">
-                To the right are images from my most recently completed project, with more detail alongside a couple of
-                others
-                on my 'Works'
-                section on the site.
-                Take a gander!
-            </p>
+            <div class="worktextbody">
+                <p id="bio">
+                    My name is Zuriel (Octavio is my first name but most people call me by my middle name),
+                    and I'm a graduated student from Depaul University. Self-driven with a
+                    strong foundation in computer science and a deep passion for game programming, I am
+                    extremely eager to contribute to innovative projects to further immerse players in digital
+                    experiences
+                    akin
+                    to my own. In tangent further my technical skillset, committed to a lifetime of learning!
+                </p>
+                <p id="bio">
+                    To the right are images from my most recently completed project, with more detail alongside a couple
+                    of
+                    others
+                    on my 'Works'
+                    section on the site.
+                    Take a gander!
+                </p>
+            </div>
             <div class="homepageSlideshow">
                 <div class="hpslides">
                     <img src="img/proj_img/monadstartscreen.png" alt="Monad start" id="monadslideimg">
