Okay, all i need to do is the proj desc

--- a/src/monad.html
+++ b/src/monad.html
@@ -37,6 +37,9 @@
                     ideas, but
                     nothing was sticking.
                 </p>
+                <p>
+                    Something else
+                </p>
             </div>
             <div class="slideshow">
                 <div class="slides">
