--- a/src/p4.html
+++ b/src/p4.html
@@ -35,6 +35,9 @@
                 <p id="projectText">
                     The start.
                 </p>
+                <p>
+                    The End.
+                </p>
             </div>
             <div class="slideshow">
                 <div class="slides">
