work done on lunch, at work!

--- a/src/monad.html
+++ b/src/monad.html
@@ -35,10 +35,26 @@
                 <p>
                     The inital brainstorming for this project was quite sporatic from what I remember. The team had many
                     ideas, but
-                    nothing was sticking.
+                    nothing was sticking. To get into a creative headspace I had put together a sample scene with a
+                    player controller
+                    and had urged the team to play wihin the space and note down anything that would arise from their
+                    time in
+                    engine.
                 </p>
                 <p>
-                    Something else
+                    Eventually as development continued we were able to iterate on some core ideas! During such I
+                    contributed by
+                    implementating the core character
+                    controller
+                    alongside it's animations. Alongside some supplemental work regarding UI functionality, scene
+                    transitions,
+                    and XInput
+                    controller support!
+                </p>
+                <p>
+                    Take a look at the project on <a href="">Itch.io</a>! Or alternatively if you want to poke around
+                    in-engine,
+                    check it out on my Github!
                 </p>
             </div>
             <div class="slideshow">
